feat: create outer service handler, outer service service, outer service postgre impl
